feature: roundtrip bytecode serialization